crates/fdemon-tui/src/render/snapshots/flutter_demon__tui__render__tests__compact_device_selector.snap
---
source: src/tui/render/tests.rs
expression: term.content()
---
 Flutter Demon  [r] [R] [x] [d] [q]────┐
│                                      │
└───────╭ Select Target Device ╮───────┘
┌ Logs ─│▶ + Launch Android Emu│───────┐
│       │  + Launch iOS Simulat│       │
│       │                      │       │
│       │                      │       │
│    Pre│↑↓ Navigate  Enter Sel│ion    │
│       │                      │       │
└───────╰──────────────────────╯───────┘
────────────────────────────────────────
 ○ Not Connected
