crates/fdemon-tui/src/render/snapshots/flutter_demon__tui__render__tests__compact_normal.snap
---
source: src/tui/render/tests.rs
expression: term.content()
---
 Flutter Demon  [r] [R] [x] [d] [q]────┐
│                                      │
└──────────────────────────────────────┘
┌ Logs ────────────────────────────────┐
│                                      │
│             Not Connected            │
│                                      │
│    Press + to start a new session    │
│                                      │
└──────────────────────────────────────┘
────────────────────────────────────────
 ○ Not Connected
