crates/fdemon-tui/src/render/snapshots/flutter_demon__tui__render__tests__normal_reloading.snap
---
source: src/tui/render/tests.rs
expression: content
---
 Flutter Demon  │  flutter_app──────────────────────────[r] [R] [x] [d] [q]────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                 Not Connected                                │
│                                                                              │
│                        Press + to start a new session                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
 ○ Not Connected │ ⬇ Auto 0/0
